# pynxtools-stm

./: .gitattributes  .gitignore  .gitmodules  404.html  CITATION.cff  MANIFEST.in  README.md  Untitled.ipynb  __init__.py  debug.py  dev-requirements.txt  how_to_guide.html  index.html  mkdocs.yml  pyproject.toml  read.py  requirements-dev.txt  requirements.txt  sitemap.xml  update_example_script.sh
.github/workflows/: backward_compatibility.yml  build_docs.yml  check_citation.yaml  check_package_versions.yaml  publish.yml  pylint.yml  pytest.yml  python-package.yml
docs/: extra.css  how_to_guide.md  index.md
docs/Explanation/: Reader_components.md
docs/How-to-guides/: How-to-interact-with-reader.md
docs/Tutorials/: Tutorials.md
docs/explanation/: reader-explanation.md
docs/how-to-guides/: how-to-interact-with-reader.md
docs/reference/: reference.md
docs/tutorial/: nomad-tutorial.md  reader-tutorial.md
explanation/: reader-explanation.html
how-to-guides/: how-to-interact-with-reader.html
pynxtools_stm/: __init__.py  analyticalplot.py  helper.py  reader.py  stm_file_parser.py  sts_file_parser.py
pynxtools_stm/nanonis_reader/: __init__.py
pynxtools_stm/nanonispy/: read.py
pynxtools_stm/nomad/: entrypoints.py  test_nomad_examples.py
pynxtools_stm_old/: __init__.py  helper.py  reader.py
reference/: reference.html
search/: search_index.json
src/pynxtools_stm/: reader.py
test_example/: Au_mica_2023_Y_A_099.sxm
tests/: debug.py  test_nomad_examples.py  test_read.py  test_reader.py
tutorial/: nomad-tutorial.html  reader-tutorial.html
(+76 files in other folders)
